<resources>
    <string name="app_name">MonitorApp</string>
    <string name="bienvenidaUsuarioTextView">Buenas tardes, Usuario</string>
    <string name="gestionarAparatosText">GESTIONAR UBICACIONES</string>
    <string name="gestionarSensorText">GESTIONAR SENSORES</string>
    <string name="gestionarHistorialText">VER HISTORIAL</string>
    <string name="agregarUbicacionButtonText">AGREGAR UBICACIÓN</string>
    <string name="buscarAparatoPorNombreEditText">Buscar ubicacion por nombre</string>
    <string name="agregarSensorButtonText">AGREGAR SENSOR</string>
    <string name="buscarSensorPorNombreEditText">Buscar sensor por nombre</string>
    <string name="historialStringTextView">Hoy</string>
    <string name="crearNuevaUbicacionTextView">Crear nueva ubicación</string>
    <string name="nombreUbicacionTextView">Nombre de la ubicación:</string>
    <string name="descripcionUbicacionTextView">Descripción de la ubicación:</string>
    <string name="finalizarUbicacionText">FINALIZAR</string>
    <string name="crearNuevoSensorTextView">Crear nuevo sensor</string>
    <string name="nombreSensorTextView">Nombre del sensor:</string>
    <string name="descripcionSensorTextView">Descripción del sensor:</string>
    <string name="ubicacionSensorTextView">Seleccione la ubicación del sensor:</string>
    <string name="temperaturaIdealTextView">Temperatura ideal en Celsius:</string>
    <string name="tipoSensorText">Seleccione el tipo de sensor:</string>
    <string name="finalizarSensorText">FINALIZAR</string>
    <string name="gestionarUbicacionesTituloTextView">Gestionar ubicaciones</string>
    <string name="listaUbicacionesString">LISTAR Y BUSCAR UBICACIONES</string>
    <string name="listadoUbicacionesIngresadasString">Listado de ubicaciones ingresadas</string>
    <string name="agregarSensorButtonString">AGREGAR SENSOR</string>
    <string name="gestionarSensoresString">Gestionar sensores</string>
    <string name="listarSensoresString">LISTAR Y BUSCAR SENSORES</string>
    <string name="listadoSensoresString">Listado de sensores ingresados</string>
    <string name="temperaturaIdealFijoString">* TEMPERATURA IDEAL EN °C:</string>
    <string name="ubicacionDelSensorString">* UBICACIÓN DEL SENSOR:</string>
    <string name="tipoDeSensorFijo">* TIPO DE SENSOR:</string>
    <string name="instanteDelRegistroString">* INSTANTE DEL REGISTRO:</string>
    <string name="lecturaTextoFijoString">* LECTURA EN CELSIUS:</string>
    <string name="buscarUbicacionString">Buscar ubicación...</string>
    <string name="resultadosTituloBusquedaUbicacionString">Resultados de la búsqueda</string>
    <string name="modificarUbicacionString">MODIFICAR UBICACIÓN</string>
    <string name="modificarUbicacionTituloString">Modificar ubicación</string>
    <string name="seleccionarLaUbicacionSpinnerString">Seleccione la ubicación:</string>
    <string name="buscarSensorString">Buscar sensor...</string>
    <string name="modificarSensorButtonString">MODIFICAR SENSOR</string>
    <string name="modificarSensorTituloString">Modificar sensor</string>
    <string name="seleccionarSensorTextView">Seleccione el sensor:</string>
    <string name="eliminarSensorButtonString">ELIMINAR SENSOR</string>
    <string name="eliminarApartadoSensorButtonString">ELIMINAR</string>
    <string name="eliminar_sensorString">Eliminar sensor</string>
    <string name="esta_acci_n_es_irreversibleString">Esta acción es irreversible.</string>
    <string name="especificar_ubicaci_nString">Especificar sensor</string>
</resources>