<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:viewBindingIgnore="true"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MenuActivity">

    <TextView
        android:id="@+id/textViewBlankSpace"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_marginStart="0dp"
        android:text="" />

    <TextView
        android:layout_below="@id/textViewBlankSpace"
        android:id="@+id/app_logo"
        android:layout_width="405dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="6dp"
        android:layout_marginLeft="6dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="6dp"
        android:layout_marginRight="6dp"
        android:layout_marginBottom="6dp"
        android:fontFamily="@font/chunkfive_regular"
        android:padding="16dp"
        android:paddingTop="16sp"
        android:text="@string/app_name"
        android:textColor="#000000"
        android:textColorLink="@color/teal_700"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/bienvenidaUsuarioTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/app_logo"
        android:layout_marginStart="20sp"
        android:layout_marginTop="4dp"
        android:padding="1sp"
        android:text="@string/bienvenidaUsuarioTextView"
        android:textSize="18sp"
        android:textStyle="bold|italic" />

    <Button
        android:id="@+id/gestionarUbicacionButton"
        android:layout_width="379dp"
        android:layout_height="105dp"
        android:layout_below="@+id/bienvenidaUsuarioTextView"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="8sp"
        android:layout_marginTop="27dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8sp"
        android:backgroundTint="@color/orange"
        android:padding="16sp"
        android:text="@string/gestionarAparatosText"
        android:textSize="20sp"
        android:textStyle="bold"
        app:icon="@drawable/baseline_edit_location_24" />

    <Button
        android:id="@+id/gestionarSensorButton"
        android:layout_width="379dp"
        android:layout_height="105dp"
        android:layout_below="@+id/gestionarUbicacionButton"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="8sp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8sp"
        android:backgroundTint="@color/orange"
        android:padding="16sp"
        android:text="@string/gestionarSensorText"
        android:textSize="20sp"
        android:textStyle="bold"
        app:icon="@drawable/baseline_sensors_24" />

    <Button
        android:id="@+id/gestionarHistorialButton"
        android:layout_width="379dp"
        android:layout_height="105dp"
        android:layout_below="@+id/gestionarSensorButton"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="8sp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="14dp"
        android:layout_marginBottom="8sp"
        android:backgroundTint="@color/orange"
        android:padding="16sp"
        android:text="@string/gestionarHistorialText"
        android:textSize="20sp"
        android:textStyle="bold"
        app:icon="@drawable/baseline_history_toggle_off_24" />

</RelativeLayout>