<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:viewBindingIgnore="true"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CrearSensorActivity">

    <TextView
        android:id="@+id/tituloSeccionSensoresTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_margin="8sp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:padding="8sp"
        android:text="@string/crearNuevoSensorTextView"
        android:textColor="@color/black"
        android:textSize="25sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tituloSensorTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tituloSeccionSensoresTextView"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_margin="10sp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="9dp"
        android:padding="8sp"
        android:text="@string/nombreSensorTextView"
        android:textColor="@color/black"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/ingresarSensorEditText"
        android:layout_width="389dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tituloSensorTextView"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="8sp"
        android:background="@drawable/edittext_border"
        android:backgroundTint="#F0EAEA"
        android:inputType="text"
        android:padding="16sp" />

    <TextView
        android:id="@+id/descripcionSensoresTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/ingresarSensorEditText"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_margin="10sp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:padding="8sp"
        android:text="@string/descripcionSensorTextView"
        android:textColor="@color/black"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/ingresarDescripcionSensorEditText"
        android:layout_width="388dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/descripcionSensoresTextView"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="8sp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="8sp"
        android:layout_marginBottom="8sp"
        android:background="@drawable/edittext_border"
        android:backgroundTint="#F0EAEA"
        android:inputType="text"
        android:padding="16sp" />

    <TextView
        android:id="@+id/temperaturaIdealTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/ingresarDescripcionSensorEditText"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_margin="10sp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:padding="8sp"
        android:text="@string/temperaturaIdealTextView"
        android:textColor="@color/black"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/ingresarTemperaturaIdealEditText"
        android:layout_width="386dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/temperaturaIdealTextView"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="8sp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="8sp"
        android:layout_marginBottom="8sp"
        android:background="@drawable/edittext_border"
        android:backgroundTint="#F0EAEA"
        android:inputType="numberDecimal"
        android:padding="16sp" />

    <TextView
        android:id="@+id/ingresarUbicacionSensorTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/ingresarTemperaturaIdealEditText"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_margin="10sp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:padding="8sp"
        android:text="@string/ubicacionSensorTextView"
        android:textColor="@color/black"
        android:textSize="20sp" />

    <Spinner
        android:id="@+id/ubicacionSpinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/ingresarUbicacionSensorTextView"
        android:layout_margin="1sp"
        android:padding="16sp" />

    <TextView
        android:id="@+id/ingresarTipoSensorTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/ubicacionSpinner"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_margin="10sp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:padding="8sp"
        android:text="@string/tipoSensorText"
        android:textColor="@color/black"
        android:textSize="20sp" />

    <Spinner
        android:id="@+id/tipoSensorSpinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/ingresarTipoSensorTextView"
        android:layout_margin="1sp"
        android:padding="16sp" />

    <Button
        android:id="@+id/finalizarSensorButton"
        android:layout_below="@+id/tipoSensorSpinner"
        android:layout_width="391dp"
        android:layout_height="60dp"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="8sp"
        android:layout_marginLeft="8sp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="9dp"
        android:layout_marginRight="8sp"
        android:backgroundTint="@color/orange"
        android:padding="10sp"
        android:text="@string/finalizarSensorText"
        android:textSize="20sp"
        android:textStyle="bold"
        app:icon="@drawable/baseline_check_circle_24" />

</RelativeLayout>