<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        tools:viewBindingIgnore="true"
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".CrearSensorActivity">

        <TextView
            android:id="@+id/tituloModificarSensoresTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_margin="8sp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:padding="8sp"
            android:text="@string/modificarSensorTituloString"
            android:textColor="@color/black"
            android:textSize="25sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tituloSeleccionarSensorTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tituloModificarSensoresTextView"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_margin="10sp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="9dp"
            android:padding="8sp"
            android:text="@string/seleccionarSensorTextView"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <AutoCompleteTextView
            android:id="@+id/nombreSensorActualSpinner"
            android:layout_width="387dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/tituloSeleccionarSensorTextView"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="12dp"
            android:layout_marginLeft="1sp"
            android:layout_marginTop="1dp"
            android:layout_marginEnd="12dp"
            android:layout_marginRight="1sp"
            android:layout_marginBottom="1sp"
            android:hint="@string/especificar_ubicaci_nString"
            android:background="@drawable/edittext_border"
            android:backgroundTint="#F0EAEA"
            android:maxLength="15"
            android:padding="16sp" />

        <TextView
            android:id="@+id/tituloModificarSensorTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/nombreSensorActualSpinner"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_margin="10sp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="9dp"
            android:padding="8sp"
            android:text="@string/nombreSensorTextView"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/modificarNombreSensorEditText"
            android:layout_width="389dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tituloModificarSensorTextView"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="10dp"
            android:layout_marginTop="1dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="8sp"
            android:background="@drawable/edittext_border"
            android:backgroundTint="#F0EAEA"
            android:inputType="text"
            android:maxLength="15"
            android:padding="16sp" />

        <TextView
            android:id="@+id/descripcionSensoresTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/modificarNombreSensorEditText"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_margin="10sp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:padding="8sp"
            android:text="@string/descripcionSensorTextView"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/modificarDescripcionSensorEditText"
            android:layout_width="388dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/descripcionSensoresTextView"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="8sp"
            android:layout_marginTop="1dp"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="8sp"
            android:layout_marginBottom="8sp"
            android:background="@drawable/edittext_border"
            android:backgroundTint="#F0EAEA"
            android:inputType="text"
            android:maxLength="30"
            android:padding="16sp" />

        <TextView
            android:id="@+id/temperaturaIdealTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/modificarDescripcionSensorEditText"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_margin="10sp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:padding="8sp"
            android:text="@string/temperaturaIdealTextView"
            android:textColor="@color/black"
            android:maxLength="30"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/modificarTemperaturaIdealEditText"
            android:layout_width="386dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/temperaturaIdealTextView"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="8sp"
            android:layout_marginTop="1dp"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="8sp"
            android:layout_marginBottom="8sp"
            android:background="@drawable/edittext_border"
            android:backgroundTint="#F0EAEA"
            android:inputType="numberDecimal"
            android:padding="16sp" />

        <TextView
            android:id="@+id/ingresarUbicacionSensorTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/modificarTemperaturaIdealEditText"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_margin="10sp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:padding="8sp"
            android:text="@string/ubicacionSensorTextView"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <Spinner
            android:id="@+id/modificarUbicacionSpinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/ingresarUbicacionSensorTextView"
            android:layout_margin="1sp"
            android:padding="16sp" />

        <TextView
            android:id="@+id/ingresarTipoSensorTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/modificarUbicacionSpinner"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_margin="10sp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:padding="8sp"
            android:text="@string/tipoSensorText"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <Spinner
            android:id="@+id/modificarTipoSensorSpinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/ingresarTipoSensorTextView"
            android:layout_margin="1sp"
            android:padding="16sp" />

        <Button
            android:id="@+id/finalizarModifcarSensorButton"
            android:layout_below="@+id/modificarTipoSensorSpinner"
            android:layout_width="391dp"
            android:layout_height="60dp"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="8sp"
            android:layout_marginLeft="8sp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="9dp"
            android:layout_marginRight="8sp"
            android:backgroundTint="@color/orange"
            android:padding="10sp"
            android:text="@string/finalizarSensorText"
            android:textSize="20sp"
            android:textStyle="bold"
            app:icon="@drawable/baseline_check_circle_24" />

        <ImageView
            android:id="@+id/dropdownSensorImageView"
            android:layout_width="46dp"
            android:layout_height="56dp"
            android:layout_alignEnd="@+id/nombreSensorActualSpinner"
            android:layout_alignBottom="@+id/nombreSensorActualSpinner"
            android:layout_marginEnd="0dp"
            android:layout_marginBottom="0dp"
            app:srcCompat="@drawable/baseline_arrow_drop_down_24" />

    </RelativeLayout>

</ScrollView>