<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:viewBindingIgnore="true"
    tools:context=".UbicacionesActivity">

    <TextView
        android:id="@+id/tituloSeccionUbicacionesTextView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textViewBlankSpace"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_margin="8sp"
        android:layout_marginStart="11dp"
        android:layout_marginTop="-37dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="8sp"
        android:padding="8sp"
        android:text="@string/gestionarUbicacionesTituloTextView"
        android:textColor="@color/black"
        android:textSize="25sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textViewBlankSpace"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="54dp"
        android:layout_marginTop="26dp"
        android:layout_marginEnd="54dp"
        android:text="" />

    <Button
        android:id="@+id/agregarUbicacionButton"
        android:layout_width="360dp"
        android:layout_height="80dp"
        android:layout_below="@+id/tituloSeccionUbicacionesTextView2"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="12dp"
        android:layout_marginLeft="8sp"
        android:layout_marginTop="14dp"
        android:layout_marginEnd="12dp"
        android:layout_marginRight="8sp"
        android:backgroundTint="@color/orange"
        android:padding="14sp"
        android:text="@string/agregarUbicacionButtonText"
        android:textSize="20sp"
        android:textStyle="bold"
        app:icon="@drawable/baseline_add_24" />

    <Button
        android:id="@+id/listarUbicacionesButton"
        android:layout_width="360dp"
        android:layout_height="80dp"
        android:layout_below="@+id/agregarUbicacionButton"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="12dp"
        android:layout_marginLeft="8sp"
        android:layout_marginTop="14dp"
        android:layout_marginEnd="12dp"
        android:layout_marginRight="8sp"
        android:backgroundTint="@color/orange"
        android:padding="14sp"
        android:text="@string/listaUbicacionesString"
        android:textSize="20sp"
        android:textStyle="bold"
        app:icon="@drawable/baseline_format_list_bulleted_24" />

</RelativeLayout>