<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:viewBindingIgnore="true"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CrearUbicacionActivity">

    <TextView
        android:id="@+id/tituloSeccionUbicacionesTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_margin="8sp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:padding="8sp"
        android:text="@string/crearNuevaUbicacionTextView"
        android:textColor="@color/black"
        android:textSize="25sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tituloUbicacionesTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tituloSeccionUbicacionesTextView"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_margin="10sp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="9dp"
        android:padding="8sp"
        android:text="@string/nombreUbicacionTextView"
        android:textColor="@color/black"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/ingresarUbicacionEditText"
        android:layout_width="389dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tituloUbicacionesTextView"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="12dp"
        android:layout_marginLeft="8sp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="12dp"
        android:layout_marginRight="8sp"
        android:layout_marginBottom="8sp"
        android:background="@drawable/edittext_border"
        android:backgroundTint="#F0EAEA"
        android:inputType="text"
        android:padding="16sp" />

    <TextView
        android:id="@+id/descripcionUbicacionesTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/ingresarUbicacionEditText"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_margin="10sp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="9dp"
        android:padding="8sp"
        android:text="@string/descripcionUbicacionTextView"
        android:textColor="@color/black"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/ingresarDescripcionEditText"
        android:layout_width="388dp"
        android:layout_height="149dp"
        android:layout_below="@+id/descripcionUbicacionesTextView"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="12dp"
        android:layout_marginLeft="8sp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="12dp"
        android:layout_marginRight="8sp"
        android:layout_marginBottom="8sp"
        android:background="@drawable/edittext_border"
        android:backgroundTint="#F0EAEA"
        android:ems="10"
        android:gravity="start|top"
        android:inputType="textMultiLine"
        android:padding="16sp" />

    <Button
        android:id="@+id/finalizarUbicacionButton"
        android:layout_width="391dp"
        android:layout_height="60dp"
        android:layout_below="@+id/ingresarDescripcionEditText"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="11dp"
        android:layout_marginLeft="8sp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="9dp"
        android:layout_marginRight="8sp"
        android:backgroundTint="@color/orange"
        android:padding="10dp"
        android:text="@string/finalizarUbicacionText"
        android:textSize="20sp"
        android:textStyle="bold"
        app:icon="@drawable/baseline_check_circle_24" />

</RelativeLayout>